--- a/seat-storage/src/main/resources/application.yml
+++ b/seat-storage/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: seat-storage
   datasource:
-    url: jdbc:mysql://192.168.171.101:3306/seat-storage?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:33060/seat-storage?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
