--- a/seat-account/src/main/resources/application.yml
+++ b/seat-account/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     url: jdbc:mysql://localhost:33060/seat-account?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: root
+    password: 666666
   cloud:
     alibaba:
       seata:
