--- a/seat-account/src/main/resources/application.yml
+++ b/seat-account/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: seat-account
   datasource:
-    url: jdbc:mysql://localhost:33060/seat-account?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:33060/seat-account?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 666666
@@ -17,14 +17,14 @@ mybatis-plus:
 server:
   port: 8081
 
-eureka:
-  server: # 官方不存在的配置（自定义配置）
+  consul:
     host: 127.0.0.1
-    port: 8761
-  client:
-    enabled: true
-    serviceUrl:
-      defaultZone: http://${eureka.server.host}:${eureka.server.port}/eureka
-    registryFetchIntervalSeconds: 5 # 5 秒轮训一次
-  instance:
-    instanceId: ${spring.application.name}:${server.port}
+    port: 8500
+    config:
+      format: yaml
+    discovery:
+      serviceName: seat-account
+      # 健康检查地址使用ip
+      prefer-ip-address: true
+      # 实例名
+      instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
