--- a/seat-order/src/main/resources/application.yml
+++ b/seat-order/src/main/resources/application.yml
@@ -17,17 +17,18 @@ mybatis-plus:
 server:
   port: 8082
 
-eureka:
-  server: # 官方不存在的配置（自定义配置）
+  consul:
     host: 127.0.0.1
-    port: 8761
-  client:
-    enabled: true
-    serviceUrl:
-      defaultZone: http://${eureka.server.host}:${eureka.server.port}/eureka
-    registryFetchIntervalSeconds: 5 # 5 秒轮训一次
-  instance:
-    instanceId: ${spring.application.name}:${server.port}
+    port: 8500
+    config:
+      format: yaml
+    discovery:
+      serviceName: seat-order
+      # 健康检查地址使用ip
+      prefer-ip-address: true
+      # 实例名
+      instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+
 feign:
   hystrix:
     enabled: false
