--- a/seat-account/src/main/resources/application.yml
+++ b/seat-account/src/main/resources/application.yml
@@ -1,30 +1,34 @@
+server:
+  port: 8081
+
 spring:
   application:
     name: seat-account
   datasource:
-    url: jdbc:mysql://127.0.0.1:33060/seat-account?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/seat-account?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 666666
+    password: admin123
+
   cloud:
+    consul:
+      host: 192.168.7.33
+      port: 8500
+      config:
+        format: yaml
+      discovery:
+        serviceName: seat-account
+        # 健康检查地址使用ip
+        prefer-ip-address: true
+        # 实例名
+        instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+
     alibaba:
       seata:
-        tx-service-group: fsp_tx_group
+        tx-service-group: etmpro
+
 mybatis-plus:
   global-config:
     db-config:
       id-type: auto
-server:
-  port: 8081
 
-  consul:
-    host: 127.0.0.1
-    port: 8500
-    config:
-      format: yaml
-    discovery:
-      serviceName: seat-account
-      # 健康检查地址使用ip
-      prefer-ip-address: true
-      # 实例名
-      instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
