--- a/seat-storage/pom.xml
+++ b/seat-storage/pom.xml
@@ -52,9 +52,11 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-seata</artifactId>
         </dependency>
+        <!--no available server to connect，netty TooLongFrameException-->
         <dependency>
             <groupId>io.seata</groupId>
-            <artifactId>seata-all</artifactId>
+            <artifactId>seata-spring</artifactId>
+            <version>${seata.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
