--- a/seat-storage/src/main/resources/application.yml
+++ b/seat-storage/src/main/resources/application.yml
@@ -1,29 +1,30 @@
+server:
+  port: 8083
+
 spring:
   application:
     name: seat-storage
   datasource:
-    url: jdbc:mysql://localhost:33060/seat-storage?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/seat-storage?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 666666
+    password: admin123
   cloud:
     alibaba:
       seata:
         tx-service-group: fsp_tx_group
-  consul:
-    host: 127.0.0.1
-    port: 8500
-    config:
-      format: yaml
-    discovery:
-      serviceName: seat-storage
-      # 健康检查地址使用ip
-      prefer-ip-address: true
-      # 实例名
-      instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
+    consul:
+      host: 192.168.7.33
+      port: 8500
+      config:
+        format: yaml
+      discovery:
+        serviceName: ${spring.application.name}
+        # 健康检查地址使用ip
+        prefer-ip-address: true
+        # 实例名
+        instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
 
-server:
-  port: 8083
 mybatis-plus:
   global-config:
     db-config:
