--- a/seat-account/src/main/resources/registry.conf
+++ b/seat-account/src/main/resources/registry.conf
@@ -2,19 +2,17 @@ registry {
   # file 、nacos 、eureka、redis、zk、consul、etcd3、sofa
   type = "consul"
 
-
-
   consul {
-    cluster = "seata-server"
+    cluster = "default2"
     serverAddr = "192.168.7.33:8500"
   }
   
 }
 
-
 config {
   # file、nacos 、apollo、zk、consul、etcd3
   type = "file"
+
   
   file {
     name = "file.conf"
