--- a/seat-storage/pom.xml
+++ b/seat-storage/pom.xml
@@ -29,25 +29,6 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
 
-        <!-- 服务注册中心 -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>com.ecwid.consul</artifactId>
-                    <groupId>consul-api</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- 替换consul-discovery里的 ecwid.consul的 版本,seata0.9需要配合此版本-->
-        <dependency>
-            <groupId>com.ecwid.consul</groupId>
-            <artifactId>consul-api</artifactId>
-            <version>${ecwid.consul.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-seata</artifactId>
@@ -55,7 +36,7 @@
         <!--no available server to connect，netty TooLongFrameException-->
         <dependency>
             <groupId>io.seata</groupId>
-            <artifactId>seata-spring</artifactId>
+            <artifactId>seata-all</artifactId>
             <version>${seata.version}</version>
         </dependency>
         <dependency>
