--- a/seat-storage/src/main/resources/bootstrap.yml
+++ b/seat-storage/src/main/resources/bootstrap.yml
@@ -25,10 +25,13 @@ spring:
 
     alibaba:
       seata:
-        tx-service-group: etmpro
+        tx-service-group: my_test_tx_group
 
 mybatis-plus:
   global-config:
     db-config:
       id-type: auto
 
+feign:
+  hystrix:
+    enabled: false
