--- a/seat-storage/src/main/resources/registry.conf
+++ b/seat-storage/src/main/resources/registry.conf
@@ -1,18 +1,19 @@
 registry {
-  # file 、nacos 、eureka、redis、zk
+  # file 、nacos 、eureka、redis、zk、consul、etcd3、sofa
   type = "consul"
-    consul {
-      cluster = "default"
-      serverAddr = "192.168.7.33:8500"
-    }
-  file {
-    name = "file.conf"
+
+  consul {
+    cluster = "default2"
+    serverAddr = "192.168.7.33:8500"
   }
+  
 }
 
 config {
-  # file、nacos 、apollo、zk
+  # file、nacos 、apollo、zk、consul、etcd3
   type = "file"
+
+  
   file {
     name = "file.conf"
   }
