--- a/seat-account/src/main/resources/file.conf
+++ b/seat-account/src/main/resources/file.conf
@@ -127,6 +127,6 @@ support {
   ## spring
   spring {
     # auto proxy the DataSource bean
-    datasource.autoproxy = false
+    datasource.autoproxy = true
   }
 }
